fixed homepage on mobile

--- a/angular-frontend/src/styles.scss
+++ b/angular-frontend/src/styles.scss
@@ -48,4 +48,14 @@ hr.divider {
   padding-top: 50px;
   padding-bottom: 50px;
   border-bottom: 1px solid #eee;
+
+  .col:last-child {
+      width: 100%;
+      height: calc(100% - 30px);
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
+      align-items: center;
+      box-sizing: border-box;
+  }
 }
